폰트적용 및 디자인 수정

--- a/pages/tech.html
+++ b/pages/tech.html
@@ -36,13 +36,13 @@
 
 <body>
   <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="font-family: BMHANNA_11yrs; font-weight: 600;">
         <div class="container">
             <a class="column navbar-brand js-scroll-trigger" href="../index.html" style="margin-left: 0;">TECH 융합인성</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                    <li class="column"><a class="nav-link js-scroll-trigger" href="./tech.html">Technique</a></li>
+                <ul class="navbar-nav ml-auto my-2 my-lg-0" style="font-size: 18px;">
+                    <li class="column" style="background-color: black;"><a class="nav-link js-scroll-trigger" href="./tech.html" style="color: white;">Technique</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./etiquette.html">Etiquette</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./charming.html">Charming</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./hope.html">Hope</a></li>
@@ -61,7 +61,7 @@
         <!-- Author -->
         <p class="lead" style="font-weight: 600; position: relative; left: 88%;">
           by
-          <a href="https://www.instagram.com/cheeeo_ro">손찬영</a>
+          <a href="#">손찬영</a>
         </p>
         <hr>
         <!-- Date/Time -->
@@ -78,8 +78,8 @@
             <cite title="Source Title">김정운교수</cite>
           </footer>
         </blockquote>
-        
-        <p style="font-size: 21px;"> &nbsp; <span style="font-size: 28px;">시</span>작부터 남자의 행복이라는 단어가 떠올랐을 때 조금 어색했다. <br>
+        <br>
+        <p style="font-size: 21px;"> &nbsp; <span style="font-size: 36px;">시</span>작부터 남자의 행복이라는 단어가 떠올랐을 때 조금 어색했다. <br>
           행복이라는 단어가 가장 기본적인 단어이지만 정작 직접 사용하는 경우는 없고<br> 책이나 인터넷에서 무심하게 지나가는 경우가 많기 때문이다. <br>
           처음 주제 중에서 눈에 띄었던 것은 심리학의 패러다임 변화에 관한 부분이었다. <br>
           개인의 약점을 고치기보단 강점을 부각하여 약점을 같이 끌어올리라는 것이었다. <br>
@@ -88,12 +88,12 @@
           또한 우연과 관련된 긍정적 해석학적 순환을 설명하면서 <br>
           축제와 휴식이 중요하다는 부분도 인상 깊었다. <br>
           한국과 외국의 일하는 모습을 비교해보면 한국은 일하는 시간이 휴식 시간보다 <br>
-          많을 수밖에 없고 외국은 워라밸*을 오래전부터 볼 수 있었다. <br>
+          많을 수밖에 없고 외국은 워라밸*을 중요시 여기는 모습을 오래전부터 볼 수 있었다. <br>
           요즘은 한국도 워라밸을 중요시하는 사람이 많아져 <br>
           회사도 변화하는 추세이지만 취업한 친구들을 보면 <br>
           아직은 더 변화 하는 것이 좋을 것 같다고 생각을 하였다.<br><br>
 
-          &nbsp; <span style="font-size: 28px;">이</span> 강연을 보면서 기억이 남았던 교수님의 일화나 문장은<br>
+          &nbsp; <span style="font-size: 36px;">이</span> 강연을 보면서 기억이 남았던 교수님의 일화나 문장은<br>
           <span style="font-size: 28px;">'삶은 순서 바꾸기이다.'</span><br> 
           <span style="font-size: 28px;">'독일 통일에 대한 비화',</span><br>
           <span style="font-size: 28px;">'한 시대를 발전시켰던 동력이 다음 시대의 발목을 잡는다'</span><br>
@@ -105,7 +105,7 @@
           이제는 근면, 성실이라는 단어로 기업에만 지속 가능한 경영만을 제공하는 것이 아닌 <br>궁극적 가치인 근로자의 재미와 행복을 보장하고 근로자들이 지속 가능한 삶, <br>
           한마디로 워라밸을 제공하는 것이 중요하고 근로자들도 추구해야 한다고 말씀하셨다. <br><br>
 
-          &nbsp; <span style="font-size: 28px;">나</span>는 회사가 근로자들의 워라밸을 충분히 보장해 준다면<br>
+          &nbsp; <span style="font-size: 36px;">나</span>는 회사가 근로자들의 워라밸을 충분히 보장해 준다면<br>
           회사와 근로자들이 모두 만족할만한 성과와 기업에 있어 <br>
           장기적으로 더 좋은 성장이 될 것으로 생각한다.<br>
           이번 강연을 보면서 이때까지는 부모님들 말처럼<br>
@@ -192,7 +192,7 @@
           <div class="card-body">
             <div class="row" style="font-weight: 600;">
               <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
+                <ul class="list-unstyled mb-0" style="font-size: 21px;">
                   <li>
                     <a href="#">#인문학강연</a>
                   </li>
@@ -205,7 +205,7 @@
                 </ul>
               </div>
               <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
+                <ul class="list-unstyled mb-0" style="font-size: 21px;">
                   <li>
                     <a href="#">#김정운교수</a>
                   </li>
