--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="./css/styles.css" rel="stylesheet"/>
+        <link href="./css/font.css" rel="stylesheet">
     </head>
-    <body id="page-top">
+    <body id="page-top" >
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="font-family: BMHANNA_11yrs; font-weight: 600;">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">TECH 융합인성</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -34,10 +35,10 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container h-100">
+            <div class="container h-100" style="font-family: BMHANNA_11yrs; font-weight: 600;">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">안녕하세요 TECH 융합인성<br> 4조 포트폴리오입니다.</h1>
+                        <p style="color: #fff; font-size: 72px;">안녕하세요 TECH 융합인성<br> 4조 포트폴리오입니다.</p>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
@@ -56,10 +57,10 @@
         <section class="page-section bg-primary" id="topic">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Topic</h2>
+                    <div class="col-lg-8 text-center" style="font-family: BMHANNA_11yrs; font-weight: 600;">
+                        <p class="text-white mt-0" style="font-size: 56px;">Topic</p>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">지난 한학기동안 TECH융합인성을 이수하며 무엇을 체험하고 어떻게 느꼈을까요?</p>
+                        <p class="text-white-50 mb-4" ><span style="color: #fff; font-size: 21px;">지난 한학기동안 TECH융합인성을 이수하며 무엇을 체험하고 어떻게 느꼈을까요?</span></p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">목차를 알아봅시다!</a> 
                     </div>
                 </div>
@@ -67,9 +68,9 @@
         </section>
 
         <!-- portfolio -->
-        <section id="portfolio">
+        <section id="portfolio" style="font-family: BMHANNA_11yrs; font-weight: 600;">
             <div class="container-fluid p-0">
-                <h2 class="text-center mt-0" style="font-weight: 600; padding-top: 50px;">목 차</h2>
+                <p class="text-center mt-0" style="font-size: 48px; padding-top: 50px;">목 차</p>
                 <hr class="divider my-4" />
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
@@ -119,23 +120,23 @@
             </div>
         </section> -->
         <!-- Details -->
-        <section class="page-section" id="details">
+        <section class="page-section" id="details" style="font-family: BMHANNA_11yrs; font-weight: 600;">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0" style="font-weight: 600;">자세히 알아보기</h2>
+                        <p class="mt-0" style="font-size: 48px;">자세히 알아보기</p>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">목차까지 알아보았으니 지금부터 자세히 알아보도록 합시다!</p>
+                        <p class="text-muted mb-5" style="font-size: 21px;">목차까지 알아보았으니 지금부터 자세히 알아보도록 합시다!</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <a href="./pages/tech.html">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-user-alt text-primary mb-4"></i>
                             <div style="color: black;">
-                                <h3 class="h4 mb-2">Talent | Technique</h3>
-                                <p class="text-muted mb-0">인문학 강연 참여</p>
+                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">Talent | Technique</p>
+                                <p class="text-muted mb-0" style="font-family: BMHANNA_11yrs; font-size: 21px;">인문학 강연 참여</p>
                             </div>
                             </a>
                         </div>
@@ -145,8 +146,8 @@
                             <a href="./pages/etiquette.html">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
                             <div style="color: black;">
-                                <h3 class="h4 mb-2">Etiquette</h3>
-                                <p class="text-muted mb-0">부일영화상 참가</p>
+                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;" >Etiquette</p>
+                                <p class="text-muted mb-0" style="font-family: BMHANNA_11yrs; font-size: 21px;">부일영화상 참가</p>
                             </div>
                             </a>
                         </div>
@@ -156,8 +157,8 @@
                             <a href="./pages/charming.html">
                             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
                             <div style="color: black;">
-                                <h3 class="h4 mb-2">Charming</h3>
-                                <p class="text-muted mb-0">ANOTHER REALITY<br>밤의 미술관 전시회</p>
+                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">Charming</p>
+                                <p class="text-muted mb-0" style="font-family: BMHANNA_11yrs; font-size: 21px; font-size: 21px;">ANOTHER REALITY<br>밤의 미술관 전시회</p>
                             </div>
                             </a>
                         </div>
@@ -167,8 +168,8 @@
                             <a href="./pages/hope.html">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                             <div style="color: black;">
-                                <h3 class="h4 mb-2">Hope</h3>
-                                <p class="text-muted mb-0">신기술 포럼 참여</p>
+                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">Hope</p>
+                                <p class="text-muted mb-0" style="font-family: BMHANNA_11yrs; font-size: 21px;">환경에너지산업전 참여</p>
                             </div>
                             </a>
                         </div>
