--- a/pages/charming.html
+++ b/pages/charming.html
@@ -44,7 +44,7 @@
                 <ul class="navbar-nav ml-auto my-2 my-lg-0" style="font-size: 18px;">
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./tech.html">Technique</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./etiquette.html">Etiquette</a></li>
-                    <li class="column" style="background-color: black;"><a class="nav-link js-scroll-trigger" href="./charming.html" style="color: white;">Charming</a></li>
+                    <li class="column"><a class="nav-link js-scroll-trigger" href="./charming.html" style="color: #f4623a;">Charming</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./hope.html">Hope</a></li>
                 </ul>
             </div>
