--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0" style="font-size: 18px;">
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./tech.html">Technique</a></li>
-                    <li class="column" style="background-color: black;"><a class="nav-link js-scroll-trigger" href="./etiquette.html" style="color: white;">Etiquette</a></li>
+                    <li class="column"><a class="nav-link js-scroll-trigger" href="./etiquette.html" style="color: #f4623a;">Etiquette</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./charming.html">Charming</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./hope.html">Hope</a></li>
                 </ul>
@@ -75,8 +75,9 @@
         <p style="font-size: 21px;"> &nbsp; <span style="font-size: 36px;">2</span>020년 10월 22일, TECH융합인성 담당 교수님이신 <br>
           이인혜교수님께서 이번 2020년 부일영화상의 진행을 맡게되셔서<br>
           제 29회 부일영화상의 언택트 참여의 기회를 얻게 되었다.<br>
-          부일영화상은 1958년 3월 27일 부산시 중구 중앙동에 위치한 국제극장에서 <br>
-          제 1회 부일영화상을 시작으로 수 많은 거장 감독과 은막의 스타들이 거쳐갔다.<br>
+          부일영화상은 1958년 3월 27일 부산시 중구 중앙동에 위치한
+          <br>국제극장에서 제 1회 부일영화상을 시작으로<br>
+          수 많은 거장 감독과 은막의 스타들이 거쳐갔다.<br>
           1950년대 임시수도의 문화적 유산을 배경으로 전쟁 이후<br>
           별다른 오락거리가 없던 젊은이들의 영화 사랑과<br>
           열악한 조건에서 더욱 뜨거웠던 영화인들의 열정은<br>
