--- a/pages/tech.html
+++ b/pages/tech.html
@@ -42,7 +42,7 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0" style="font-size: 18px;">
-                    <li class="column" style="background-color: black;"><a class="nav-link js-scroll-trigger" href="./tech.html" style="color: white;">Technique</a></li>
+                    <li class="column"><a class="nav-link js-scroll-trigger" href="./tech.html" style="color: #f4623a;">Technique</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./etiquette.html">Etiquette</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./charming.html">Charming</a></li>
                     <li class="column"><a class="nav-link js-scroll-trigger" href="./hope.html">Hope</a></li>
@@ -79,40 +79,54 @@
           </footer>
         </blockquote>
         <br>
-        <p style="font-size: 21px;"> &nbsp; <span style="font-size: 36px;">시</span>작부터 남자의 행복이라는 단어가 떠올랐을 때 조금 어색했다. <br>
-          행복이라는 단어가 가장 기본적인 단어이지만 정작 직접 사용하는 경우는 없고<br> 책이나 인터넷에서 무심하게 지나가는 경우가 많기 때문이다. <br>
-          처음 주제 중에서 눈에 띄었던 것은 심리학의 패러다임 변화에 관한 부분이었다. <br>
-          개인의 약점을 고치기보단 강점을 부각하여 약점을 같이 끌어올리라는 것이었다. <br>
+        <p style="font-size: 21px;"> 
+          &nbsp; <span style="font-size: 36px;">시</span>작부터 남자의 행복이라는 단어가 떠올랐을 때 조금 어색했다. <br>
+          행복이라는 단어가 가장 기본적인 단어이지만<br>
+          정작 직접 사용하는 경우는 없고<br>
+          책이나 인터넷에서 무심하게 지나가는 경우가 많기 때문이다. <br>
+          처음 주제 중에서 눈에 띄었던 것은<br>
+          심리학의 패러다임 변화에 관한 부분이었다. <br>
+          개인의 약점을 고치기보단 강점을 부각하여<br>
+          약점을 같이 끌어올리라는 것이었다. <br>
           대부분 사람은 약점을 보완하려고 고생하고 지체하지만, <br>
-          이 강연을 듣고 나서는 강점을 조금 더 끌어올리는 것에 노력해야겠다고 생각했다. <br>
+          이 강연을 듣고 나서는 강점을 조금 더 끌어올리는 것에<br>
+          노력해야겠다고 생각했다. <br>
           또한 우연과 관련된 긍정적 해석학적 순환을 설명하면서 <br>
           축제와 휴식이 중요하다는 부분도 인상 깊었다. <br>
-          한국과 외국의 일하는 모습을 비교해보면 한국은 일하는 시간이 휴식 시간보다 <br>
-          많을 수밖에 없고 외국은 워라밸*을 중요시 여기는 모습을 오래전부터 볼 수 있었다. <br>
+          한국과 외국의 일하는 모습을 비교해보면<br>
+          한국은 일하는 시간이 휴식 시간보다 <br>
+          많을 수밖에 없고 외국은 워라밸*을<br>
+          중요시 여기는 모습을 오래전부터 볼 수 있었다. <br>
           요즘은 한국도 워라밸을 중요시하는 사람이 많아져 <br>
           회사도 변화하는 추세이지만 취업한 친구들을 보면 <br>
           아직은 더 변화 하는 것이 좋을 것 같다고 생각을 하였다.<br><br>
 
           &nbsp; <span style="font-size: 36px;">이</span> 강연을 보면서 기억이 남았던 교수님의 일화나 문장은<br>
-          <span style="font-size: 28px;">'삶은 순서 바꾸기이다.'</span><br> 
-          <span style="font-size: 28px;">'독일 통일에 대한 비화',</span><br>
-          <span style="font-size: 28px;">'한 시대를 발전시켰던 동력이 다음 시대의 발목을 잡는다'</span><br>
-           <span style="font-size: 28px;">'재미없는 삶은 무효다.'</span><br>
+          <span style="font-size: 26px;">'삶은 순서 바꾸기이다.'</span><br> 
+          <span style="font-size: 26px;">'재미없는 삶은 무효다.'</span><br>
+          <span style="font-size: 26px;">'독일 통일에 대한 비화',</span><br>
+          <span style="font-size: 26px;">'한 시대를 발전시킨 동력이 다음 시대의 발목을 잡는다'</span><br>
           라는 것들이 크게 마음에 와닿았고 기억에 남았다. <br>
           특히 역사의 변증법을 설명할 때 부모님이 꼭 한 번쯤 하셨고 <br>많이 들은 말은 <span style="font-size: 28px;"></span>'근면, 성실한 사람이 성공한다는 것이었다.'</span><br>
           하지만 김정운 교수님은 근면, 성실이라는 수단적 가치가<br>
           지금 한국사회의 문제라는 것이다. <br>
-          이제는 근면, 성실이라는 단어로 기업에만 지속 가능한 경영만을 제공하는 것이 아닌 <br>궁극적 가치인 근로자의 재미와 행복을 보장하고 근로자들이 지속 가능한 삶, <br>
-          한마디로 워라밸을 제공하는 것이 중요하고 근로자들도 추구해야 한다고 말씀하셨다. <br><br>
+          이제는 근면, 성실이라는 단어로<br>
+          기업에만 지속 가능한 경영만을 제공하는 것이 아닌 <br>
+          궁극적 가치인 근로자의 재미와 행복을 보장하고<br>
+          근로자들이 지속 가능한 삶, <br>
+          한마디로 워라밸을 제공하는 것이 중요하고<br>
+          근로자들도 추구해야 한다고 말씀하셨다. <br><br>
 
           &nbsp; <span style="font-size: 36px;">나</span>는 회사가 근로자들의 워라밸을 충분히 보장해 준다면<br>
           회사와 근로자들이 모두 만족할만한 성과와 기업에 있어 <br>
           장기적으로 더 좋은 성장이 될 것으로 생각한다.<br>
           이번 강연을 보면서 이때까지는 부모님들 말처럼<br>
           '그냥 열심히만 하면 성공할 수 있다.'라는 생각에서<br>
-          '내가 잘하고 좋아하는 것을 열심히 그리고 즐겁게 해보자.'라고 생각하게 되었다. <br>
+          '내가 잘하고 좋아하는 것을 열심히 그리고 즐겁게 해보자.'라고  <br>
+          생각하게 되었다. <br>
           무엇보다 막상 쉬려면 주저하는 경우가 많았지만,<br>
-          김정운 교수님의 강연을 보고 휴식도 꼭 필요한 하나의 공부라고 생각하고<br>
+          김정운교수님의 강연을 보고 <br>
+          휴식도 꼭 필요한 하나의 공부라고 생각하고<br>
           이 강연을 계기로 내가 조금 더 자신감을 가지고<br>
           나 자신을 좋아하게 되는 계기가 되었으면 좋겠다.<br><br>
         </p>
