--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -75,9 +75,8 @@
         <p style="font-size: 21px;"> &nbsp; <span style="font-size: 36px;">2</span>020년 10월 22일, TECH융합인성 담당 교수님이신 <br>
           이인혜교수님께서 이번 2020년 부일영화상의 진행을 맡게되셔서<br>
           제 29회 부일영화상의 언택트 참여의 기회를 얻게 되었다.<br>
-          부일영화상은 1958년 3월 27일 부산시 중구 중앙동에 위치한
-          <br>국제극장에서 제 1회 부일영화상을 시작으로<br>
-          수 많은 거장 감독과 은막의 스타들이 거쳐갔다.<br>
+          부일영화상은 1958년 3월 27일 부산시 중구 중앙동에 위치한 국제극장에서 <br>
+          제 1회 부일영화상을 시작으로 수 많은 거장 감독과 은막의 스타들이 거쳐갔다.<br>
           1950년대 임시수도의 문화적 유산을 배경으로 전쟁 이후<br>
           별다른 오락거리가 없던 젊은이들의 영화 사랑과<br>
           열악한 조건에서 더욱 뜨거웠던 영화인들의 열정은<br>
@@ -109,10 +108,7 @@
           뿌듯해하는 수상자들의 표정에서 그들의 수많은 노력을 엿볼 수 있었고<br>
           나도 나의 분야에서 열심히 노력하여 인정받는 사람이 되어야겠다고 다짐이 들었다.<br>
           이런 자리를 마련해주신 이인혜교수님께 이 자리를 빌어 감사의 인사를 올립니다.<br>
-          <p style="text-align: center; font-size: 21px;">감사합니다.<br></p>
 
-          
-          
           <br>
         </p>
         <hr>
