--- a/index.html
+++ b/index.html
@@ -74,13 +74,20 @@
                 <hr class="divider my-4" />
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg"
+                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Etc.</div>
+                                <div class="project-name">4조</div>
+                            </div></a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Talent | Technique</div>
                                 <div class="project-name">인문학 강연 참여</div>
-                            </div></a
-                        >
+                            </div></a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"
@@ -88,8 +95,15 @@
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Etiquette</div>
                                 <div class="project-name">부일영화상 참여</div>
-                            </div></a
-                        >
+                            </div></a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg"
+                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Etc.</div>
+                                <div class="project-name">이인혜교수님</div>
+                            </div></a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
@@ -97,8 +111,7 @@
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Charming</div>
                                 <div class="project-name">ANOTHER REALITY<br>밤의 미술관 전시회</div>
-                            </div></a
-                        >
+                            </div></a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg"
@@ -106,9 +119,9 @@
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Hope</div>
                                 <div class="project-name">신기술 포럼 참여</div>
-                            </div></a
-                        >
+                            </div></a>
                     </div>
+                    
                 </div>
             </div>
         </section>
