--- a/pages/charming.html
+++ b/pages/charming.html
@@ -72,26 +72,22 @@
         <hr>
         <!-- Post Content -->
         <br>
-        <p style="font-size: 21px;"> &nbsp; <span style="font-size: 36px;">기</span>다리고 기다리던 상상마당부산이 서면에 개관을 하였다.<br>
-          평소 문화생활을 할 일도 별로 없고 관심도 없었지만<br>
-          이렇게 가까운 곳에 많은 것들이 있다는 걸 알게 되고<br>
+        <p style="font-size: 21px;"> &nbsp; <span style="font-size: 36px;">기</span>다리고 기다리던 KT&G 상상마당 서면에 개관하였다.<br>
+          평소 문화생활을 할 일도 없고 별로 관심도 없었지만<br>
+          이렇게 가까운 곳에 문화생활을 즐길 수 있다는 걸 알게 되어<br>
           이번 기회에 학우들과 가보고 싶어졌다.<br>
           상상마당은 홍대에도 있는데 라이브 홀에서 공연을 한다고 한다.<br>
           하지만 코로나로 인해 지금 현재 라이브 홀은 휴관중이고<br>
           CGV나 식당가도 내년 봄에 오픈 예정이라고 한다. <br><br>
 
-          &nbsp; <span style="font-size: 36px;">밤</span>의 미술관은 상상마당 안에 있는 전시회이다.<br>
-          오전 11시부터 20시까지 전시를 하는데<br>
-          부산을 대표하는 아티스트 6팀이<br>
-          부산을 포함해 세계 곳곳을 경험하며<br>
-          그 이면에 자리한 정서와 축적된 경험을<br>
-          표현한 작품들을 만날 수 있었다.<br><br>
+          &nbsp; <span style="font-size: 36px;">밤</span>의 미술관은 상상마당에서 진행된 전시회이다.<br>
+          부산을 대표하는 아티스트 6팀이 부산을 포함한 세계 곳곳을 다니며<br>
+          그 이면에 자리한 정서와 경험을 표현한 작품들을 만날 수 있었다.<br><br>
           
-          &nbsp; <span style="font-size: 36px;">오</span>픈부터 오후 5시이전까지는 낮 타임, 오후 5시부터는 밤 타임으로 운영되는데<br>
-          같은 전시장에서 시간대에 따라 색다른 분위기를 느낄 수 있는 게 흥미로웠고<br>
-          티켓을 가지고 있으면 전시 기간 내 낮 타임도 관람 가능했다.<br>
-          전시장에 들어서니 복층 구조로 되어 있었고<br>
-          1층의 Treasure Island에서는 정혜련 작가님의<br> 신기한 조형물과 빛의 향연이 펼쳐졌다.<br>
+          &nbsp; <span style="font-size: 36px;">오</span>픈부터 오후 5시까지는 낮 타임, 오후 5시부터는 밤 타임으로 운영되는데<br>
+          같은 전시장에서 시간대에 따라 색다른 분위기를 느낄 수 있는 게 흥미로웠다.<br>
+          밤의 미술관 전시회는 복층으로 구성되어 있었다.<br>
+          1층 Treasure Island에서는 정혜련작가의 신기한 조형물과 빛의 향연이 펼쳐졌다.<br>
           오랜 역사를 지닌 서면의 상징적인 장소들이 모여 조화를 이루고<br>
           그 공간들이 동시에 각각의 세계를 가진 채 존재하는 것을 표현하였다고 한다.<br>
           서면의 변화하는 모습을 오랜 기간 지켜본<br>
