--- a/pages/charming.html
+++ b/pages/charming.html
@@ -97,7 +97,10 @@
           도시에 살고있는 나에게는 이러한 작품들이 낯설게 느껴지지 않았다.<br>
           아이러니하게도 익숙하다고 느낀 풍경들에서 새로운 감정들을 느꼈다.<br><br>
 
-          &nbsp; <span style="font-size: 36px;">이</span>렇게 밤의 미술관을 다녀왔는데.....추가가 필요하다.....<br>
+          &nbsp; <span style="font-size: 36px;">밤</span>의 미술관은 우리의 일상적인 삶의 녹아있는 전시회같았다.<br>
+          살아가며 무심하게 생각했던 공간을 작품으로 만나니 색다른 경험이었다.<br>
+          이번 기회로 멀게만 느껴졌던 문화생활인 전시회가 친숙하게 와닿았고,<br>
+          앞으로도 다른 전시회를 거리낌없이 방문할 수 있는 계기가 되었다.<br><br>
           
         </p>
         <hr>
