--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -59,7 +59,7 @@
         <!-- Title -->
         <p class="mt-4" style="font-size: 40px;">부일영화상 참여</p>
         <!-- Author -->
-        <p class="lead" style="font-weight: 600; position: relative; left: 88%;">
+        <p class="lead" style="font-weight: 600; position: relative; left: 87%;">
           by
           <a href="https://www.instagram.com/cheeeo_ro/">박철오</a>
         </p>
@@ -72,41 +72,36 @@
         <hr>
         <!-- Post Content -->
         <br>
-        <p style="font-size: 21px;"> &nbsp; <span style="font-size: 36px;">2</span>020년 10월 22일, TECH융합인성 담당 교수님이신 <br>
-          이인혜교수님께서 이번 2020년 부일영화상의 진행을 맡게되셔서<br>
-          제 29회 부일영화상의 언택트 참여의 기회를 얻게 되었다.<br>
-          부일영화상은 1958년 3월 27일 부산시 중구 중앙동에 위치한 국제극장에서 <br>
-          제 1회 부일영화상을 시작으로 수 많은 거장 감독과 은막의 스타들이 거쳐갔다.<br>
-          1950년대 임시수도의 문화적 유산을 배경으로 전쟁 이후<br>
-          별다른 오락거리가 없던 젊은이들의 영화 사랑과<br>
-          열악한 조건에서 더욱 뜨거웠던 영화인들의 열정은<br>
-          1960년대 한국 영화의 황금기와 부일영화상의 전성기를 이끌었다.<br>
-          그러나 이런 빛나는 순간들을 치열하게 기록했던 부일영화상은<br>
-          70년대 텔레비전의 등장과 문화예술정책이 서울 중심으로 집중되면서<br>
-          1973년 제 16회로 막을 내리며 중단되었다.<br><br>
+        <p style="font-size: 21px;"> 
+          &nbsp; <span style="font-size: 36px;">2</span>020년 10월 22일, TECH융합인성 담당교수이신 이인혜교수님께서 <br>
+          제29회 부일영화상의 진행을 맡으시게 되어 언택트 참여 기회를 얻었다.<br>
+          부일영화상은 1958년 3월 27일 중앙동에 있던 국제극장에서 시작하여<br>
+          지금까지 수많은 거장의 감독들과 은막의 스타들이 거쳐갔다고 한다.<br>
+          1950년대의 열악한 조건에서도 영화인들의 영화에 대한 열정과 사랑으로<br>
+          1960년대에는 한국 영화의 황금기와 부일영화상의 전성기를 누렸다.<br>
+          이런 빛나는 순간들을 기록했던 부일영화상은 70년대의 텔레비전 등장과<br>
+          문화예술정책이 서울을 중심으로 집중되면서 1973년 16회로 중단되었다.<br><br>
           
-          &nbsp; <span style="font-size: 36px;">하</span>지만 영화인들의 염원을 담아 35년간 중단되었던 부일영화상은<br>
-          2008년 제 17회 부일영화상으로 화려하게 부활하였다.<br> 
-          부활의 순간에는 중단의 그 날까지 국내에서 가장 권위 있는 영화상이었던<br>
-          부일영화상이 얼마만큼 영화인들의 추억과 열정과 낭만이 담긴<br>
+          &nbsp; <span style="font-size: 36px;">하</span>지만 35년간 중단됐던 부일영화상은 영화인들의 간절한 염원을 담아 <br>
+          2008년 10월 9일 제17회 부일영화상으로 화려하게 다시 탄생하였다.<br>
+          중단의 순간까지 국내에서 가장 권위있는 영화상으로 불린 부일영화상이<br>
+          다시 부활했을 땐, 영화인들의 얼마나 많은 추억과 열정 그리고 낭만이 담긴<br>
           축제의 장이었던지를 확인하기란 그렇게 어렵지 않았다고 한다.<br><br>
           
-          &nbsp; <span style="font-size: 36px;">부</span>일영화상은 2016년 부산일보 창간 70주년을 맞아 또 한 번 도약하게 되는데<br>
-          결론부터 한마디로 요약하자면 개방성있는 영화상으로 변경된다.<br>
-          부활의 해부터 24회까지는 주로 호텔 연회장에서 시상식을 열었기에<br>
-          초청할 수 있는 관객의 수가 400명 내외에 불과하였다.<br>
-          25회 시상식부터는 벡스코 오디토리움에서 진행하여<br>
-          기존보다 약 5배인 2000여명을 초청하게되었다.<br>
+          &nbsp; <span style="font-size: 36px;">부</span>일영화상은 2016년 부산일보 창간 70주년을 맞아 재도약하게 되는데<br>
+          결론부터 한마디로 요약하자면 보다 개방성있는 영화상으로 변경되었다.<br>
+          24회까지는 주로 호텔 연회장에서 시상식을 열어 초청 가능한 관객 수가<br>
+          약 400명에 불과했지만 25회부터는 벡스코 오디토리움에서 진행하여<br>
+          기존보다 약 5배인 2000여명과 함께 영화상을 즐길 수 있게 되었다.<br>
           또한 현장 참가가 어려운 관객들을 위하여 생중계도 시작하게 되었는데,<br>
-          지상파인 부산 MBC생중계와 국내 최대 포털사이트인 네이버의 V라이브를 통한<br>
-          인터넷 생중계도 시작하였다. 뿐만 아니라 관객들이 직접 수상자를 결정하는<br>
-          '남녀인기스타상', 전년도 수상자와 함께하는 '핸드 프린팅 이벤트'를 통해<br>
-          소통하는 자리 또한 마련되었다.<br><br>
+          부산 MBC생중계와 네이버의 V라이브를 통한 인터넷 생중계도 시작하였다.<br>
+          뿐만 아니라 관객들이 직접 수상자를 뽑을 수 있는 '남녀인기스타상'과<br>
+          전년도 수상자와 함께하는 '핸드프린팅'을 통해 소통의 자리도 마련되었다.<br><br>
 
-          &nbsp; <span style="font-size: 36px;">지</span>금껏 살아오며 영화는 보기만 하였지 관련된 영화상 또는 영화제를<br>
-          한 번도 본 적이 없었는데 이번 언택트 참여를 통하여 그간 노고가 인정 받는 듯<br>
-          뿌듯해하는 수상자들의 표정에서 그들의 수많은 노력을 엿볼 수 있었고<br>
-          나도 나의 분야에서 열심히 노력하여 인정받는 사람이 되어야겠다고 다짐이 들었다.<br>
+          &nbsp; <span style="font-size: 36px;">지</span>금까지 살아오면서 영화를 단순히 보고 즐기는 수준으로만 그쳤는데<br>
+          이번 부일영화상 참여를 통해 수상자들이 영화제작의 노고를 인정 받고<br>
+          뿌듯해하는 표정에서 그들의 수많은 노력과 성취감들을 엿볼 수 있었고<br>
+          나도 한 분야에서 열심히 노력하여 인정받는 사람이 되어야겠다고 다짐했다.<br>
           이런 자리를 마련해주신 이인혜교수님께 이 자리를 빌어 감사의 인사를 올립니다.<br>
 
           <br>
@@ -215,7 +210,7 @@
         <div class="card my-4">
           <h5 class="card-header">Summary</h5>
           <div class="card-body" style="font-size: 18px;">
-            부일영화상은 1958년 출범한 국내 최초의 영화상이다. 그 곳을 참여해보았다.
+            부일영화상은 1958년 출범한 국내 최초의 영화상이다. 그 곳에 참여해보았다.
           </div>
         </div>
 
