--- a/pages/hope.html
+++ b/pages/hope.html
@@ -76,9 +76,9 @@
         &nbsp; <span style="font-size: 36px;">T</span>HEC 융합인성 조별과제 수행 차<br>
         11월 11일에 부산 해운대 벡스코에서 열린<br>
         국제환경에너지 산업전 박람회를 다녀왔다.<br><br>
-        <span style="font-size: 26px;">국제환경에너지 산업전 박람회는<br>
+        <span style="font-size: 36px;">국</span>제환경에너지 산업전 박람회는<br>
         국내 최초, 최대의 환경, 에너지 통합 전시회이자<br>
-        신재생에너지 보급과 산업 육성을 목적으로 하는 전시회이다. </span><br><br>
+        신재생에너지 보급과 산업 육성을 목적으로 하는 전시회이다.<br>
         수질 환경, 대기환경, 폐기물처리, 측정분석기기, 전력/발전&가스,<br> 신재생에너지,
         에너지 효율화, 태양광(열), 풍력에너지 등을<br> 주제로 한 전시품목들이 전시되어있었다.<br><br>
 
