--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -59,7 +59,7 @@
         <!-- Title -->
         <p class="mt-4" style="font-size: 40px;">부일영화상 참여</p>
         <!-- Author -->
-        <p class="lead" style="font-weight: 600; position: relative; left: 87%;">
+        <p class="lead" style="position: relative; left: 87%;">
           by
           <a href="https://www.instagram.com/cheeeo_ro/">박철오</a>
         </p>
