--- a/pages/hope.html
+++ b/pages/hope.html
@@ -59,7 +59,7 @@
         <!-- Title -->
         <p class="mt-4" style="font-size: 40px;">환경에너지 산업전</p>
         <!-- Author -->
-        <p class="lead" style="font-weight: 600; position: relative; left: 87%;">
+        <p class="lead" style="position: relative; left: 87%;">
           by
           <a href="#">손정욱</a>
         </p>
