--- a/pages/tech.html
+++ b/pages/tech.html
@@ -59,7 +59,7 @@
         <!-- Title -->
         <p class="mt-4" style="font-size: 40px;">사는 게 재미없는 이 시대 남자들에게</p>
         <!-- Author -->
-        <p class="lead" style="font-weight: 600; position: relative; left: 87%;">
+        <p class="lead" style="position: relative; left: 87%;">
           by
           <a href="#">손찬영</a>
         </p>
@@ -75,7 +75,7 @@
         <blockquote class="blockquote">
           <p class="mb-0" style="font-size: 21px;">사는게 재미없는 이 시대의 남자들과 그 가족들에게 힘이 되어 드리겠습니다.</p>
           <footer class="blockquote-footer">
-            <cite title="Source Title">김정운교수</cite>
+            <cite title="Source Title" style="position: relative; left: 75%;">김정운교수</cite>
           </footer>
         </blockquote>
         <br>
