update chanyeong's comment

--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -125,8 +125,13 @@
         <div class="media mb-4">
           <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
           <div class="media-body">
-            <h5 class="mt-0">Commenter Name1</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손찬영</p>
+            <p style="font-size: 21px;">
+              처음 듣는 부일영화상 시상식에 참여해 본 것이 새로운 경험이었다.
+              생각보다 역사 깊은 영화 시상식이었고 온라인으로나마 참석해 본 것이 참으로 의미가 깊었다고 생각이 된다.
+              찾아가거나 노력하지 않는 이상 직접 눈으로 볼 기회가 거의 없고 참석할 기회가 거의 없는 걸 알고 있어서 더 의미 있는 경험이지 않았나 생각한다.
+              처음엔 접점도 없고 굳이 참석해야 하나 생각하기도 했지만, 막상 참석해보니 의외로 보람찬 기회였다고 생각한다.
+            </p>  
           </div>
         </div>
 
