--- a/pages/hope.html
+++ b/pages/hope.html
@@ -131,8 +131,16 @@
         <div class="media mb-4">
           <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
           <div class="media-body">
-            <h5 class="mt-0">Commenter Name1</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손찬영</p>
+            <p style="font-size: 21px;">
+              전공과 관련된 내용이다 보니 전기차나 친환경 에너지가 주로 많을 거로 생각했지만
+              생각지 못하게 우리가 현재 사용하고 있는 각종 에너지와 기계들을 얼마나 효율적으로 개선했는지
+              어떻게 개선하였는지를 설명하는 제품이 많아서 의외로 놀라웠다.
+              정작 전기차나 친환경 에너지보다 가스나 수자원, 압축기 등 지금 우리가 쉽게 구할 수 있는 기기들부터
+              미세먼지 포집기 같은, 평소에 잘 보지 못하는 기기들까지 모든 제품을 완벽하게 이해하기는 어려웠지만
+              짧은 시간 돌아보면서 내가 에너지라는 것을 좁게 생각하지 않았나. 라고 다시 한번 느끼게 되었다.
+              이번 박람회를 보면서 진로나 취업에 관하여 또 다른 관점으로 접근할 기회가 된 것 같고 선택할 수 있는 폭이 더 넓어졌다는 생각이 들었다.
+            </p>    
           </div>
         </div>
 
