--- a/pages/charming.html
+++ b/pages/charming.html
@@ -122,8 +122,21 @@
         <div class="media mb-4">
           <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
           <div class="media-body">
-            <h5 class="mt-0">Commenter Name1</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손찬영</p>
+            <p style="font-size: 21px;">
+            처음 입장했을 때는 조명들과 많은 LED를 사용한 구조물이 눈길을 사로잡았지만
+            몇 작품은 의도가 무엇인지 무엇을 뜻하는지 정확히 알아차리기가 힘들었다.
+            2층에는 암실과 작가님이 촬영한 필름이 전시되어 있었다.
+            디지털카메라가 보편화된 지금 직접 필름을 본 것이 중학생 이후로 처음 봐서 새삼 그리움도 느낄 수 있었다.
+            2층에는 여러 사진 작품들을 볼 수 있었고 그 중 눈에 띄었던 것은 부산의 야경을 촬영한 것과
+            현재 우리의 일상을 보여주는 듯 한 설치 작품이었다.
+            조리개 장노출을 이용하여 부산의 야경을 촬영한 사진의 경우 외국의 야경 사진 못지않은 아름다움을 볼 수 있었고
+            외국 못지않은 아름다운 야경을 부산도 가지고 있다는 것을 다시 한 번 알 수 있었고
+            같은 공간에서 각자 사람들이 본인의 휴대폰만을 보고 있는 모습은 먼 거리의 사람들과는
+            인터넷으로 연결되어 같이 소통하는 모습과는 반대로 정작 같은 공간의 사람들과의 소통은 적어진 것 같다고 생각하기도 하였다.
+            미술 전시회 같은 경우는 마음먹고 오기가 쉽지 않아 직접 가본 적은 손에 꼽을 정도이지만
+            직접 가보니 또 새로운 경험을 하게 된 것 같아 보람이 있었다고 생각한다.
+            </p>
           </div>
         </div>
 
